get all info with pagination
